--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="mainText">
         <div class="home">
-            <img id="showFN" src="./FirstName.png" alt="">
-            <img id="showHome" src="./Home.png" alt="">
+            <img id="showFN" src="./FirstName.png" alt="X">
+            <img id="showHome" src="./Home.png" alt="Y">
         </div>
         <div class="about">
-            <img id="showLN" src="./LastName.png" alt="">
-            <img id="showAbout" src="./About.png" alt="">
+            <img id="showLN" src="./LastName.png" alt="Z">
+            <img id="showAbout" src="./About.png" alt="A">
         </div>
     </div>
     
