--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
             </a>
         </div>
     </div>
-    <img id="indexFrame" src="./Assets/frame.png" alt="">
+<!--     <img id="indexFrame" src="./Assets/frame.png" alt=""> -->
 </body>
 </html>
