--- a/index.html
+++ b/index.html
@@ -3,24 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Main</title>
 
-    <!-- Styling sheet -->
-    <link rel="stylesheet" href="style.css">
+    <!-- Imported fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="CSS/style.css">
+
 </head>
 <body>
-    <div class="mainPage">
-        <div class="home">
-            <a href="home.html">
-            <img id="showFN" src="./Assets/FirstName.png" onmouseover="this.src='./Assets/Home.png'" onmouseout="this.src='./Assets/FirstName.png'" alt="">
-            </a>
+    <div class="mainBody">
+        <div class="mainBox">
+            <!-- Taran/Home -->
+            <div class="firstName">
+            <a href="home.html"></a>
+            </div>
+            <!-- Sidhu/About -->
+            <div class="lastName">
+                <a href="about.html"></a>
+            </div>
         </div>
-        <div class="about">
-            <a href="about.html">
-            <img id="showLN" src="./Assets/LastName.png"  onmouseover="this.src='./Assets/About.png'" onmouseout="this.src='./Assets/LastName.png'" alt="">
-            </a>
-        </div>
+    <!-- <div class="earth">
+        <img src="./Assets/benjamin-cole-DDhET-updco-unsplash.jpg" alt="">
+    </div> -->
     </div>
-<!--     <img id="indexFrame" src="./Assets/frame.png" alt=""> -->
 </body>
-</html>
+</html>             
