--- a/about.html
+++ b/about.html
@@ -3,21 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <!-- Styling sheet -->
-    <link rel="stylesheet" href="style.css">
-
+    <title>Document</title>
+    <!-- Imported fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Overpass:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <div class="mainAbout">
-        <div class="aboutMe">
-            <img src="./Assets/about2.png" alt="">
-        </div>
-        <div class="aboutMe__Description">
-            <h2>Hi, my name is <span>Taranveer Singh Sidhu</span></h2>
-        </div>
+            <h1>About.</h1>
+            <div class="aboutParts">
+                <div class="aboutMe__Description">
+                    <h2>Hi, my name is <span>Taranveer Singh Sidhu</span></h2>
+                    <p>I am Computer Science student at University of Manitoba. </p>
+                </div>
+                <div class="contacts">
+                    <h2>Contacts:</h2>
+                    <ul class="contactList">
+                        <li><a href="https://www.linkedin.com/in/taranveer-singh-876599177/">Linkedin</a></li>
+                        <li><a href="https://github.com/TAR2D">Github</a></li>
+                        <li><a href="https://www.instagram.com/taranvsidhu/">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/taran.sidhu.54379">Facebook</a></li>
+                    </ul>
+                </div>
+            </div>
     </div>
 </body>
 </html>
