--- a/home.html
+++ b/home.html
@@ -3,31 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <!-- Styling sheet -->
-    <link rel="stylesheet" href="style.css">
-    <!-- fonts -->
+    <title>About</title>
+    <!-- Imported fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,500;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <div class="mainHome">
-        <div class="work">
-            <img src="./Assets/work.png" alt="">
-        </div>
-        <div class="workInfo">
-            <h2>Graphics Designer</h2>
-            <div class="workOne">
-                <h3>Artwork Recreation -</h3>
-                <div class="workOne_Description">
-                    <p>Created Logos recreation for <a href="https://www.berklee.edu/clubs/esports">Berklee esports club</a>. Recreated designs for their esports teams in high quality fomarts.</p>
-                </div>
-                <h3>Gaming Artwork Designer -</h3>
-                <div class="workOne_Description">
-                    <p>Created free artworks for gaming teams and players in <a href="https://criticalopsgame.com/">Critical Ops</a> Game. One of my famous logo design for competative team named "<a href="https://twitter.com/b4mercy?lang=en">Beg4Mercy</a>"</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    
 </body>
 </html>
