--- a/home.html
+++ b/home.html
@@ -10,9 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+    <div class="working">
+    <h2>Under Work :)</h2>
+    <h2>Meanwhile, You can check on my projects on <a href="https://github.com/TAR2D">Github</a>.</h2>
+</div>
 </body>
 </html>
