--- a/index.html
+++ b/index.html
@@ -3,32 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
-
-    <!-- Imported fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Style Sheet -->
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="frontPageStyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="mainBody">
-        <div class="mainBox">
-            <!-- Taran/Home -->
-            <div class="firstName">
-            <a href="home.html"></a>
-            </div>
-            <!-- Sidhu/About -->
-            <div class="lastName">
-                <a href="about.html"></a>
-            </div>
-        </div>
-    <!-- <div class="earth">
-        <img src="./Assets/benjamin-cole-DDhET-updco-unsplash.jpg" alt="">
-    </div> -->
+    <div class="mainHeadings">
+        <a href="home.html">
+            <div class="firstLink"><h1 id="firstH">Taran</h1></div>
+        </a>
+        <a href="about.html">
+        <div class="secondLink"><h1 id="secondH">Sidhu</h1></div>
+        </a>
     </div>
 </body>
-</html>             
+</html>
