--- a/home.html
+++ b/home.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <!-- Imported fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-   <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="homeStyle.css">
+    <link href="https://fonts.googleapis.com/css2?family=Allison&family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+    <title>Home</title>
 </head>
 <body>
     <div class="working">
-    <h2>Under Work :)</h2>
-    <h2>Meanwhile, You can check on my projects on <a href="https://github.com/TAR2D">Github</a>.</h2>
-</div>
+        <h2>Under Work :)</h2>
+        <h2>Meanwhile, You can check on my projects on <a href="https://github.com/TAR2D"><span>Github</span></a>.</h2>
 </body>
 </html>
