--- a/home.html
+++ b/home.html
@@ -15,5 +15,8 @@
     <div class="working">
         <h2>Under Work :)</h2>
         <h2>Meanwhile, You can check on my projects on <a href="https://github.com/TAR2D"><span>Github</span></a>.</h2>
+        <h2>Some Art Works</h2>
+        <img src="Beg4Mercy.jpg" alt="Beg4Mercy Logo">
+        <a href="https://github.com/TAR2D/singhtaran.github.io/blob/main/PROJECT_STDO.pdf"><span>Escape Comic</span></a>
 </body>
 </html>
