--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taran Sidhu</title>
+    <title>Taranveer Singh</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap" rel="stylesheet">
@@ -12,14 +12,16 @@
     <script src="https://kit.fontawesome.com/2e56d7ac38.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h3 class="name">TARANVEER SINGH</h3>
+    <h3 class="name">TARANVEER SINGH <a title="Resume" href="https://drive.google.com/file/d/1AhJUydpNiL2MI-PcKDyplAqFmNabAUQN/view?usp=sharing"><i class="far fa-file"></a></i></h3>
     <p class="about">Hi, I am passionate and experienced Computer Scientist. I am in my 3rd Year of Bsc Computer Science Major at <span><a href="https://umanitoba.ca">University of Manitoba</a></span>, Winnipeg. 
         My fields of intrest are Web Design, Data Science, Network and Security.</p>
 
     <div class="work">
         <button class="workHeading">Work<i id="workRotateButton" class="fas fa-caret-right"></i></button>
         <ul class="projects">
-            <li class="project1"><a href="https://github.com/TAR2D/SuggestionSearch.1"><span>AutoCompleteSearchBar</span>: Build an auto complete search using advance Data Structures. Ability to complete incomplete query providing prioritized suggestion.</a></li>
+            <li class="project0"><a href="https://github.com/TAR2D/LinkHolder.github.io"><h2>LinkHolder:</h2> A web application that hold all your important link at one place. Preview : <a href="https://tar2d.github.io/LinkHolder.github.io/"><span>LinkHolder</span></a>. More feature incoming like add notes, filter option and alot.</li>
+            <li class="project1"><a href="https://github.com/ReactiveAlkali/shields-up"><h2>Shields Ups:</h2> It is 2D space <a href="https://en.wikipedia.org/wiki/Shooter_game"><span>Shooter Video Game</span></a>. Highlighted in the University of Manitoba CSSA's 2021 Game Jam.</li>
+            <li class="project2"><a href="https://github.com/TAR2D/SuggestionSearch.1"><h2>AutoCompleteSearchBar</h2></a>: Build an auto complete search using advance Data Structures. Ability to complete incomplete query providing prioritized suggestion.</li>
         </ul>
     </div>
     <div class="skills">
@@ -47,10 +49,6 @@
             <div class="box side-bottom"></div>
         </div>
         </div>
-    <!-- About >
-    Work > 1)Projects 
-           2)Exp
-    Contact > -->
     <script src="script.js"></script>
 </body>
 </html>
