--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="work">
         <button class="workHeading">Work<i id="workRotateButton" class="fas fa-caret-right"></i></button>
         <ul class="projects">
-            <li class="project0"><a href="https://github.com/TAR2D/LinkHolder.github.io"><h2>LinkHolder:</h2> A web application that hold all your important link at one place. Preview : <a href="https://tar2d.github.io/LinkHolder.github.io/"><span>LinkHolder</span></a>. More feature incoming like add notes, filter option and alot.</li>
-            <li class="project1"><a href="https://github.com/ReactiveAlkali/shields-up"><h2>Shields Ups:</h2> It is 2D space <a href="https://en.wikipedia.org/wiki/Shooter_game"><span>Shooter Video Game</span></a>. Highlighted in the University of Manitoba CSSA's 2021 Game Jam.</li>
+            <li class="project0"><a href="https://github.com/TAR2D/LinkHolder.github.io"><h2>LinkHolder:</h2></a> A web application that hold all your important link at one place. Preview : <a href="https://tar2d.github.io/LinkHolder.github.io/"><span>LinkHolder</span></a>. More feature incoming like add notes, filter option and alot.</li>
+            <li class="project1"><a href="https://github.com/ReactiveAlkali/shields-up"><h2>Shields Ups:</h2></a> It is 2D space <a href="https://en.wikipedia.org/wiki/Shooter_game"><span>Shooter Video Game</span></a>. Highlighted in the University of Manitoba CSSA's 2021 Game Jam.</li>
             <li class="project2"><a href="https://github.com/TAR2D/SuggestionSearch.1"><h2>AutoCompleteSearchBar</h2></a>: Build an auto complete search using advance Data Structures. Ability to complete incomplete query providing prioritized suggestion.</li>
         </ul>
     </div>
