--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <h3 class="name">TARANVEER SINGH <a title="Resume" href="https://drive.google.com/file/d/1_x65lxYvTMV3Zv1m751qz8Tewohf1ZpV/view?usp=sharing"><i class="far fa-file"></a></i></h3>
     <p class="about">Hi, I am passionate and experienced Computer Scientist. I am in my 3rd Year of Bsc Computer Science Major at <span><a href="https://umanitoba.ca">University of Manitoba</a></span>, Winnipeg. 
-        My fields of intrest are Web Design, Data Science, Network and Security.</p>
+        My fields of interest are Web Design, Data Science, Network and Security.</p>
 
     <div class="work">
         <button class="workHeading">Work<i id="workRotateButton" class="fas fa-caret-right"></i></button>
