--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taranveer Singh</title>
-    <link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/46233992?s=400&u=0c48c912dd7d996f9d73b558b962140d1d73a70a&v=4o">
+    <link rel="shortcut icon" type="image/x-icon" href="logo.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap" rel="stylesheet">
